--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "domainCode",
   "type": "module",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "build": "node -r ./scripts/node-preload.cjs ./node_modules/nuxi/bin/nuxi.mjs build",
     "dev": "node -r ./scripts/node-preload.cjs ./node_modules/nuxi/bin/nuxi.mjs dev --host 127.0.0.1 --port 3000",
